--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "start": "node ./dist/cluster.service.js"
+  },
   "devDependencies": {
     "@types/node": "^17.0.24"
   }
